--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.2.0",
     "video.js": "^7.11.4"
   }
 }
